<resources>
    <string name="app_name">Coin Profits</string>
    <string name="action_settings">Settings</string>
    <string name="coin">Currency</string>
    <string name="amount">Amount Held</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add Currency</string>
    <string name="dialog_edit">Edit Currency</string>
    <string name="buyin_price">Buy-In Price</string>
    <string name="no_coin">Select a currency</string>
    <string name="no_amount">Enter the amount of currency you hold</string>
    <string name="no_buyin">Enter the average buy-in value for your currency</string>
    <string name="merge_item">What is merging an item?</string>
    <string name="replace_item">What is replacing an item?</string>
    <string name="dialog_merge">Merge</string>
    <string name="dialog_replace">Replace</string>
    <string name="merge_description">Merging an item takes the previous amount and buy-in value and combines the two. For the buy-in value it takes the average of the old and new buy-in values with respect to the percentage of combined total</string>
    <string name="buy_in_value">Buy-in value</string>
    <string name="merged">Merged</string>
    <string name="_new">New</string>
    <string name="previous">Previous</string>
    <string name="_amount">Amount</string>
    <string name="replace_description">Replace takes the old values and replaces them with the new values</string>
    <string name="dropdown_arrow">Dropdown arrow</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="placeholder_name">Basic Attention Token</string>
    <string name="last">Last:</string>
    <string name="last_placeholder">$2.80</string>
    <string name="balance">Balance</string>
    <string name="balance_placeholder">44.23452 BAT / $212,000</string>
    <string name="margins">Margins</string>
    <string name="ic_info">Information Icon</string>
    <string name="balance_id_placeholder">45.0651231 BAT</string>
    <string name="balance_usd_placeholder">$126.18 USD</string>
    <string name="balance_btc_placeholder">฿0.00006148 BTC</string>
    <string name="balance_eth_placeholder">Ξ0.16039 ETH</string>
    <string name="buyin_placeholder">$120.00</string>
    <string name="margin_usd_placeholder">$1895.05</string>
    <string name="margin_percent_placeholder">300%</string>
    <string name="last_updated">Last updated:</string>
    <string name="time_placeholder">8:15pm</string>
    <string name="auto_refresh">Auto refresh on start-up</string>
    <string name="balance_colon">Balance:</string>
    <string name="title_activity_add_holdings">Add Currency</string>
    <string name="show_the_public_key_associated_with_this_entry">Show the public key associated with this entry</string>
    <string name="remove_this_entry">Remove this entry</string>
    <string name="currency_icon">Currency icon</string>
    <string name="pick_currency">Pick Currency</string>
    <string name="holdings">Holdings</string>
    <string name="add">Add</string>
    <string name="_1d">1D</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_6m">6M</string>
    <string name="_1y">1Y</string>
    <string name="all">All</string>
    <string name="buyin_total_placeholder">$1300.00</string>
    <string name="trade_price">Trade Price</string>
    <string name="public_key_if_eth_erc20_token">Public Key (If ETH/ERC20 Token)</string>
    <string name="check">check</string>
    <string name="expand">Expand</string>
    <string name="read_only">Read-Only</string>

    <string name="about">
        Thank you for using Coin Profits!\n\n

        The source code for this can be found on my github\n\n

        A special thanks to CoinMarketCap and Ethplorer for allowing me to use their API\n\n

        Icons are provided by Icons8\n\n

        If you found my app to be of value, feel free to donate Ethereum to this address:\n\n

        0x6263b06a107879dd4375165ab232b761e003b72c
    </string>
</resources>
