<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_parent">

        <AutoCompleteTextView
            android:id="@+id/coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/coin"
            android:inputType="textAutoComplete|textAutoCorrect|textNoSuggestions">

            <requestFocus />
        </AutoCompleteTextView>
    </RelativeLayout>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/buyin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/buyin_price"
        android:inputType="number|numberSigned|numberDecimal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            style="@style/DialogButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:minWidth="64dp"
            android:padding="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/dialog_cancel"
            android:textStyle="normal" />

        <Space
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_save"
            style="@style/DialogButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:minWidth="64dp"
            android:padding="0dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@android:string/ok"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>