<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>
        <variable
            name="holdingsCombined"
            type="net.blakelee.coinprofits.models.HoldingsCombined"/>

        <variable
            name="editMode"
            type="Boolean"/>
        <import type="android.view.View"/>
    </data>

    <android.support.v7.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:id="@+id/item_top"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/coin_icon"
                android:maxLines="1"
                android:text="@{holdingsCombined.name}"
                android:ellipsize="end"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/last_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/name"
                android:layout_marginEnd="3dp"
                android:layout_toStartOf="@+id/last_price"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/last"
                android:visibility="@{editMode ? View.INVISIBLE : View.VISIBLE}"
                card_view:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/last_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/name"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:visibility="@{editMode ? View.INVISIBLE : View.VISIBLE}"
                android:text="@{holdingsCombined.getLast()}" />

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/last_text"
                android:layout_marginEnd="3dp"
                android:layout_toStartOf="@+id/balance"
                android:gravity="center_vertical"
                android:text="@string/balance_colon"
                android:visibility="@{(holdingsCombined.watchOnly() || editMode) ? View.GONE : View.VISIBLE}"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:visibility="@{editMode ? View.INVISIBLE : View.VISIBLE}"
                android:text="@{holdingsCombined.watchOnly() ? @string/read_only : holdingsCombined.getBalanceFiat()}"
                android:layout_below="@+id/last_text" />

            <ImageView
                android:id="@+id/coin_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="@string/coin_icon"
                card_view:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/item_reorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/last_price"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:padding="8dp"
                android:scaleType="center"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:visibility="@{editMode ? View.VISIBLE : View.INVISIBLE}"
                app:srcCompat="@drawable/ic_reorder" />

        </RelativeLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/coin_item_expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="72dp"
            app:el_expanded="false"
            app:el_parallax="0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/balance_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/balance" />

                <ImageView
                    android:id="@+id/balance_info"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/balance_text_2"
                    android:contentDescription="@string/ic_info"
                    app:srcCompat="@android:drawable/ic_dialog_info" />

                <TextView
                    android:id="@+id/balance_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBalanceFiat()}"
                    card_view:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/balance_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/balance_btc"
                    android:layout_below="@+id/balance_info"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBalanceCrypto()}"/>

                <TextView
                    android:id="@+id/balance_btc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/balance_currency"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBalanceBTC()}"/>

                <TextView
                    android:id="@+id/balance_eth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/balance_btc"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBalanceETH()}" />

                <ImageView
                    android:id="@+id/buyin_info"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignBottom="@+id/buyin_price_text"
                    android:layout_gravity="top"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/buyin_price_text"
                    android:contentDescription="@string/ic_info"
                    app:srcCompat="@android:drawable/ic_dialog_info" />

                <TextView
                    android:id="@+id/buyin_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/balance_eth"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/buyin_price" />

                <TextView
                    android:id="@+id/buyin_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/balance_eth"
                    android:layout_below="@+id/buyin_total"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBuyInTotal()}" />

                <TextView
                    android:id="@+id/buyin_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/balance_eth"
                    android:layout_alignTop="@+id/buyin_info"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getBuyInPrice()}" />

                <TextView
                    android:id="@+id/margin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/buyin_average"
                    android:layout_gravity="top"
                    android:layout_marginTop="8dp"
                    android:text="@string/margins" />

                <ImageView
                    android:id="@+id/margin_info"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignTop="@+id/margin_text"
                    android:layout_gravity="top"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/margin_text"
                    android:contentDescription="@string/ic_info"
                    app:srcCompat="@android:drawable/ic_dialog_info" />

                <TextView
                    android:id="@+id/margin_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/margin_text"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getMarginFiat()}" />

                <TextView
                    android:id="@+id/margin_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/margin_value"
                    android:gravity="end"
                    android:text="@{holdingsCombined.getMarginPercent()}" />
            </RelativeLayout>

        </net.cachapa.expandablelayout.ExpandableLayout>

    </android.support.v7.widget.CardView>

</layout>